fix spacing

--- a/src/Styles/footer.css
+++ b/src/Styles/footer.css
@@ -19,7 +19,8 @@
 	display: inline-block;
 }
 
-.bmac {
+.bmac img {
 	height: 60px !important;
 	width: 217px !important;
+	vertical-align: middle;
 }
